--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <div id="container">
         <h1>TODO LIST</h1>
         <p>A place to store things you need to do!</p>
-        <input type="text" placeholder="Filter your chores">
+        <input type="text" placeholder="Filter your chores" ng-model="test">
         <div ng-controller="list as lists">
             <ol>
-                <div ng-repeat="chores in lists.chores">
+                <div ng-repeat="chores in lists.chores | filter: test">
                     <div ng-controller="complete" ng-hide="myvar">
-                        <li ng-class='{ li: true, completeClass: completeClass}'>
-                            <button class="butt" ng-click="taskCompleted()" value="complete">Completed</button>{{chores}}</li>
-                                <input type="button" value="x" ng-model="myvar"><input type="checkbox" ng-model="myvar">
+                            <li ng-class='{ li: true, completeClass: completeClass}'>
+                            <button class="butt" ng-click="taskCompleted()" value="complete">Completed</button>{{chores}}<input type="button" value="x" ng-model="myvar" ng-click="lists.removeTask()"></li>
                     </div>
                 </div>
             </ol>
-            <input type="text" ng-model="addChore" placeholder="Add your chores">
-            <button class="add">Add</button>
+            <form  ng-submit="lists.add(lists.newChore)">
+            <p><input ng-model="lists.newChore" placeholder="Add your chores" /><br></p>
+            <p><button type="submit">Add</button></p>
+            </form>
         </div>
-        <input type="checkbox" ng-model="myvar">
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js'></script>
     <script src="module.js"></script>
